--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# OPENAI_API_KEY=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
-# OPENAI_ORGANIZATION=org-mpRLuf6DREQ47Gwfeu8E6Zid
+# OPENAI_API_KEY=ENTER YOUR API KEY
+# OPENAI_ORGANIZATION=ENTER YOUR ORGANIZATION ID
